--- a/index.html
+++ b/index.html
@@ -249,9 +249,9 @@
         <h3 class="mb-3 font-bold text-xl">我的最新網站專案 ✨</h3>
         <p class="mb-6 leading-relaxed">這是我最新完成的網站作品，展現了現代化的設計理念和優秀的使用者體驗。採用了最新的前端技術，確保在各種裝置上都能完美呈現。</p>
         <div class="mb-6 p-4 glass-effect rounded-xl">
-         <p class="text-sm font-medium mb-2">🌐 專案連結 宇宙行星：</p><a href="https://chaurjg-tr.github.io/CHAURJG-TR20/" target="_blank" rel="noopener noreferrer" class="hover:underline break-all text-sm"> https://leafy-douhua-0e0117.netlify.app/ </a>
+         <p class="text-sm font-medium mb-2">🌐 專案連結 math：</p><a href="https://chaurjg-tr.github.io/math/" target="_blank" rel="noopener noreferrer" class="hover:underline break-all text-sm"> https://leafy-douhua-0e0117.netlify.app/ </a>
         </div>
-         <p class="text-sm font-medium mb-2">🌐 專案連結 宇宙行星：</p><a href=" <p class="text-sm font-medium mb-2">🌐 專案連結 宇宙行星：</p><a href="https://chaurjg-tr.github.io/CHAURJG-TR20/" target="_blank" rel="noopener noreferrer" class="hover:underline break-all text-sm"> https://leafy-douhua-0e0117.netlify.app/ </a>
+         <p class="text-sm font-medium mb-2"🌐 專案連結 宇宙行星：</p><a href="https://chaurjg-tr.github.io/CHAURJG-TR20/" target="_blank" rel="noopener noreferrer" class="hover:underline break-all text-sm"> https://leafy-douhua-0e0117.netlify.app/ </a>
         </div>" target="_blank" rel="noopener noreferrer" class="hover:underline break-all text-sm"> https://leafy-douhua-0e0117.netlify.app/ </a>
         </div>
        <p class="text-sm font-medium mb-2">🌐 專案連結 畫畫：</p><a href="https://chaurjg-tr.github.io/CHAURJG-TR2/" target="_blank" rel="noopener noreferrer" class="hover:underline break-all text-sm"> https://leafy-douhua-0e0117.netlify.app/ </a>
