Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -257,6 +257,8 @@
         </div>
         <p class="text-sm font-medium mb-2">🌐 專案連結：</p><a href="https://chaurjg-tr.github.io/510/" target="_blank" rel="noopener noreferrer" class="hover:underline break-all text-sm"> https://leafy-douhua-0e0117.netlify.app/ </a>
         </div>
+     <p class="text-sm font-medium mb-2">🌐 專案連結：</p><a href="https://chaurjg-tr.github.io/BEEF/" target="_blank" rel="noopener noreferrer" class="hover:underline break-all text-sm"> https://leafy-douhua-0e0117.netlify.app/ </a>
+        </div>
         <div class="flex items-center justify-between">
          <div class="flex items-center space-x-4"><span class="text-sm">2025年11月04日</span>
           <div class="flex space-x-2"><span class="text-xs px-2 py-1 rounded">React</span> <span class="text-xs px-2 py-1 rounded">Tailwind</span>
